# shadowing

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
.github/workflows/: deploy.yml
cli/: README.md  pyproject.toml
cli/src/shadowmine/: __init__.py  __main__.py  app.py  clip.py  constants.py  deps.py  export_pkg.py  mine.py  models.py  project.py  readings.py  subtitles.py  youtube.py
cli/tests/: test_app.py  test_clip_export.py  test_mine.py  test_readings.py  test_subtitles.py  test_youtube_cache.py
schemas/: shadowing-package.schema.json
schemas/fixtures/example-package/: manifest.json  sentences.json  source.json
schemas/fixtures/example-package/subtitles/: ja.vtt
schemas/tests/: test_package_schema.py
src/: App.tsx  styles.css  types.ts
src/analysis/: japanese.ts
src/components/: AnalysisPanel.tsx  Layout.tsx  MediaClipEditor.tsx  YouTubeMiner.tsx
src/db/: repositories.ts  schema.ts
src/hooks/: useAssetUrl.ts
src/pages/: HelpPage.tsx  LibraryPage.tsx  SentencePage.tsx  SettingsPage.tsx  SourcePage.tsx
src/services/: analysis.ts  domain.ts  index.ts  media.ts  services.test.ts  shared.ts  subtitles.ts  transfer.ts  youtube.ts
web/: package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  styles.css
web/src/analysis/: audio.ts  pitch.ts
web/src/components/: Layout.tsx
web/src/pages/: HelpPage.tsx  LibraryPage.tsx  SentencePage.tsx  SettingsPage.tsx  SourcePage.tsx
web/src/services/: assets.ts  domain.ts  index.ts  recording.ts  services.test.ts  shared.ts  transfer.ts
