[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowmine"
version = "0.1.0"
description = "Desktop CLI for mining Japanese shadowing clips into portable .shadowing.zip packages"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Japanese Shadowing Lab" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "yt-dlp>=2024.8.6",
  "fugashi>=1.3",
  "unidic-lite>=1.0.8",
  "jaconv>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
shadowmine = "shadowmine.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "../schemas/tests"]
pythonpath = ["src"]
